# TuyaOpen

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  export.ps1  export.sh  requirements.txt  tos.py
.github/workflows/: check-build-apps.yml
apps/tuya.ai/: README.md  README_zh.md
apps/tuya.ai/ai_components/ai_audio/: CMakeLists.txt
apps/tuya.ai/duo_eye_mood/: Kconfig
apps/tuya.ai/duo_eye_mood/config/: TUYA_T5AI_BOARD_EYES.config
apps/tuya.ai/your_chat_bot/: CMakeLists.txt
apps/tuya.ai/your_chat_bot/config/: TUYA_T5AI_EVB.config
apps/tuya.ai/your_chat_bot/include/: tuya_config.h
apps/tuya.ai/your_chat_bot/src/: app_chat_bot.c  app_system_info.c  tuya_main.c
apps/tuya.ai/your_chat_bot/src/display/: app_display.c
apps/tuya.ai/your_chat_bot/src/display/ui/: ui_wechat.c
apps/tuya.ai/your_otto_robot/: CMakeLists.txt
apps/tuya_cloud/: README.md  README_zh.md
boards/T2/T2-U/: Kconfig
boards/T5AI/TUYA_T5AI_BOARD/: Kconfig  tuya_t5ai_board.c
platform/: platform_config.yaml
src/liblvgl/: Kconfig
src/liblvgl/port/: lv_port_disp.c
src/libmqtt/src/: mqtt_client_wrapper.c
src/tal_system/include/: tal_log.h
src/tal_system/src/: tal_log.c
src/tal_wifi/src/: tal_wifi.c
src/tuya_cloud_service/authorize/: tuya_authorize.h
src/tuya_cloud_service/lan/: tuya_lan.c
src/tuya_cloud_service/protocol/: tuya_protocol.c
tools/cli_command/: cli_build.py  cli_check.py  cli_clean.py  cli_config.py  cli_dev.py  cli_update.py  cli_version.py  util.py  util_files.py  util_git.py
tools/cmake/: get_system_processor.py
(+44 files in other folders)
